src/objects/Project_Detail__c.object
<CustomObject>
    <description>This object is used to create project and assign users to project</description>
    <fields>
        <fullName>Company__c</fullName>
        <description>The Company to which the project Belong to</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <label>MAG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R01- SYSTEM MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>R02- RF POWER BASE STATIO</fullName>
                </value>
                <value>
                    <fullName>R05- MCO 8/16/32 BIT</fullName>
                </value>
                <value>
                    <fullName>R07- LOGIC</fullName>
                </value>
                <value>
                    <fullName>R16- IVN</fullName>
                </value>
                <value>
                    <fullName>R25- SMART HOME / BUILDIN</fullName>
                </value>
                <value>
                    <fullName>R33- SMALL SIGNAL DIODES</fullName>
                </value>
                <value>
                    <fullName>R34- SMALL SIGNAL MOSFETS</fullName>
                </value>
                <value>
                    <fullName>R38- Anti-Counterfeit</fullName>
                </value>
                <value>
                    <fullName>R40- STANDARD PRODUCTS UN</fullName>
                </value>
                <value>
                    <fullName>R53- SENSORS</fullName>
                </value>
                <value>
                    <fullName>R58- RF POWER BROADC/MICR</fullName>
                </value>
                <value>
                    <fullName>R61- NXP SOFTWARE</fullName>
                </value>
                <value>
                    <fullName>R62- CAR ACCESS &amp; IMMOB</fullName>
                </value>
                <value>
                    <fullName>R67- SMART ANALOG</fullName>
                </value>
                <value>
                    <fullName>R71- PROTECT &amp; FILTERING</fullName>
                </value>
                <value>
                    <fullName>R72- BIPOLAR POWER</fullName>
                </value>
                <value>
                    <fullName>R73- POWER MOS</fullName>
                </value>
                <value>
                    <fullName>R77- Smart Antenna Soluti</fullName>
                </value>
                <value>
                    <fullName>R78- DATA CONVERTERS</fullName>
                </value>
                <value>
                    <fullName>R79- POWER SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>R83- PERSONAL HEALTH</fullName>
                </value>
                <value>
                    <fullName>R90- LIGHTING SOLUTIONS</fullName>
                </value>
                <value>
                    <fullName>RA1- CAR ENTERTAINMENT</fullName>
                </value>
                <value>
                    <fullName>RB3- TELEMATICS</fullName>
                </value>
                <value>
                    <fullName>RB4- UNDIVIDED BL AUTO AM</fullName>
                </value>
                <value>
                    <fullName>RB6- AUTO SSL</fullName>
                </value>
                <value>
                    <fullName>RB7- Secure Mobility &amp; Re</fullName>
                </value>
                <value>
                    <fullName>RB8- CATENA</fullName>
                </value>
                <value>
                    <fullName>RC1- Secure Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <description>This Filed will Contain description of the project</description>
        <label>Project Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>This filed contain Name of the Project</description>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>